Added final slide, removed Liquibase logo from slide

--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 
 <section class="slide" id="why-liquibase">
 	<h2>Warum gerade Liquibase?</h2>
-	<p><img src="assets/liquibase_logo.gif" alt="Refactoring Databases"/></p>
 	<ul>
 		<li class="slide">Aktives Projekt</li>
 		<li class="slide">Umfangreiches Feature-Set</li>
@@ -102,11 +101,14 @@
 	<h1>Liquibase hands-on</h1>
 </section>
 
-
 <section class="slide" id="refactoring-databases">
 	<h2>Refactoring Databases</h2>
 	<p><img width="250" height="330" src="assets/refactoring_databases_cover.jpg" alt="Refactoring Databases"/></p>
 	<p><a href="http://databaserefactoring.com/">Refactoring Databases</a> - Evolutionary Database Design</p>
+</section>
+
+<section class="slide" id="end-slide">
+	<h1>Questions?</h1>
 </section>
 
 <form action="." method="get" class="goto-form">
