Use german "Fragen" instead of "Questions" on last slide

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 </section>
 
 <section class="slide" id="end-slide">
-	<h1>Questions?</h1>
+	<h1>Fragen?</h1>
 </section>
 
 <form action="." method="get" class="goto-form">
